// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkSplitInput should render correctly with inputLength param 1`] = `
<DocumentFragment>
  <div
    class="bpk-split-input"
  >
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 0"
        autocomplete="off"
        class="bpk-input bpk-input--large"
        id="otpInput-0"
        maxlength="1"
        name="otpInput-0"
        placeholder=""
        type="number"
        value=""
      />
    </div>
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 1"
        autocomplete="off"
        class="bpk-input bpk-input--large"
        id="otpInput-1"
        maxlength="1"
        name="otpInput-1"
        placeholder=""
        type="number"
        value=""
      />
    </div>
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 2"
        autocomplete="off"
        class="bpk-input bpk-input--large"
        id="otpInput-2"
        maxlength="1"
        name="otpInput-2"
        placeholder=""
        type="number"
        value=""
      />
    </div>
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 3"
        autocomplete="off"
        class="bpk-input bpk-input--large"
        id="otpInput-3"
        maxlength="1"
        name="otpInput-3"
        placeholder=""
        type="number"
        value=""
      />
    </div>
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 4"
        autocomplete="off"
        class="bpk-input bpk-input--large"
        id="otpInput-4"
        maxlength="1"
        name="otpInput-4"
        placeholder=""
        type="number"
        value=""
      />
    </div>
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 5"
        autocomplete="off"
        class="bpk-input bpk-input--large"
        id="otpInput-5"
        maxlength="1"
        name="otpInput-5"
        placeholder=""
        type="number"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkSplitInput should render correctly with large set as false 1`] = `
<DocumentFragment>
  <div
    class="bpk-split-input"
  >
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 0"
        autocomplete="off"
        class="bpk-input"
        id="otpInput-0"
        maxlength="1"
        name="otpInput-0"
        placeholder=""
        type="number"
        value=""
      />
    </div>
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 1"
        autocomplete="off"
        class="bpk-input"
        id="otpInput-1"
        maxlength="1"
        name="otpInput-1"
        placeholder=""
        type="number"
        value=""
      />
    </div>
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 2"
        autocomplete="off"
        class="bpk-input"
        id="otpInput-2"
        maxlength="1"
        name="otpInput-2"
        placeholder=""
        type="number"
        value=""
      />
    </div>
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 3"
        autocomplete="off"
        class="bpk-input"
        id="otpInput-3"
        maxlength="1"
        name="otpInput-3"
        placeholder=""
        type="number"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkSplitInput should render correctly with placeholder 1`] = `
<DocumentFragment>
  <div
    class="bpk-split-input"
  >
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 0"
        autocomplete="off"
        class="bpk-input bpk-input--large"
        id="otpInput-0"
        maxlength="1"
        name="otpInput-0"
        placeholder="x"
        type="number"
        value=""
      />
    </div>
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 1"
        autocomplete="off"
        class="bpk-input bpk-input--large"
        id="otpInput-1"
        maxlength="1"
        name="otpInput-1"
        placeholder="x"
        type="number"
        value=""
      />
    </div>
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 2"
        autocomplete="off"
        class="bpk-input bpk-input--large"
        id="otpInput-2"
        maxlength="1"
        name="otpInput-2"
        placeholder="x"
        type="number"
        value=""
      />
    </div>
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 3"
        autocomplete="off"
        class="bpk-input bpk-input--large"
        id="otpInput-3"
        maxlength="1"
        name="otpInput-3"
        placeholder="x"
        type="number"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkSplitInput should render without crashing 1`] = `
<DocumentFragment>
  <div
    class="bpk-split-input"
  >
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 0"
        autocomplete="off"
        class="bpk-input bpk-input--large"
        id="otpInput-0"
        maxlength="1"
        name="otpInput-0"
        placeholder=""
        type="number"
        value=""
      />
    </div>
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 1"
        autocomplete="off"
        class="bpk-input bpk-input--large"
        id="otpInput-1"
        maxlength="1"
        name="otpInput-1"
        placeholder=""
        type="number"
        value=""
      />
    </div>
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 2"
        autocomplete="off"
        class="bpk-input bpk-input--large"
        id="otpInput-2"
        maxlength="1"
        name="otpInput-2"
        placeholder=""
        type="number"
        value=""
      />
    </div>
    <div
      class="bpk-input-field"
    >
      <input
        aria-invalid="false"
        aria-label="otp input 3"
        autocomplete="off"
        class="bpk-input bpk-input--large"
        id="otpInput-3"
        maxlength="1"
        name="otpInput-3"
        placeholder=""
        type="number"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;
